using azul jre 11 alpine image