@@ -1,43 +1,42 @@
 package io.github.benslabbert.trak.worker.util;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
 import io.github.benslabbert.trak.worker.response.ProductResponse;
 import io.github.benslabbert.trak.worker.response.takealot.TakealotApiResponse;
-import java.io.FileNotFoundException;
-import java.io.IOException;
-import java.net.HttpURLConnection;
-import java.net.URL;
-import java.util.Optional;
 import lombok.extern.slf4j.Slf4j;
-import org.apache.commons.io.IOUtils;
+import org.springframework.http.HttpMethod;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.client.HttpClientErrorException;
+import org.springframework.web.client.RestTemplate;
+
+import java.net.URI;
+import java.util.Optional;
 
 @Slf4j
 public abstract class ProductRequest {
 
   protected Optional<ProductResponse> getProductResponse(String url) {
 
-    HttpURLConnection con = null;
-
     try {
+      RestTemplate restTemplate = new RestTemplate();
+      // todo this appears to be broken when in the container
+      // javax.net.ssl.SSLHandshakeException: Received fatal alert: handshake_failure
 
-      con = (HttpURLConnection) new URL(url).openConnection();
-      con.setRequestMethod("GET");
+      ResponseEntity<TakealotApiResponse> exchange =
+          restTemplate.exchange(URI.create(url), HttpMethod.GET, null, TakealotApiResponse.class);
 
-      byte[] response = IOUtils.toByteArray(con.getInputStream());
+      if (exchange == null) return Optional.empty();
 
-      ObjectMapper mapper = new ObjectMapper();
-      ProductResponse apiResponse = mapper.readValue(response, TakealotApiResponse.class);
+      return Optional.ofNullable(exchange.getBody());
 
-      con.disconnect();
-      return Optional.of(apiResponse);
-
-    } catch (FileNotFoundException e) {
-      log.warn("bad api endpoint : {}", url);
-      if (con != null) con.disconnect();
+    } catch (HttpClientErrorException e) {
+      log.warn(
+          "{}: Client exception: {} with HTTP Status code: {}",
+          e.getMessage(),
+          url,
+          e.getRawStatusCode());
       return Optional.empty();
-    } catch (IOException e) {
-      log.warn("failed to deserialize api response: {}", url);
-      if (con != null) con.disconnect();
+    } catch (Exception e) {
+      log.warn("Failed to deserialize api response: " + url, e);
       return Optional.empty();
     }
   }
